com.owasp/src/com/example/dao/FindStatement.java
/* Generated By:JavaCC: Do not edit this line. FindStatement.java */
package com.example.dao;

public class FindStatement implements FindStatementConstants {
  public static void main(String args []) throws ParseException
  {

    FindStatement parser = new FindStatement(System.in);
    parser.CompilationUnit();
    

  }

  final public void CompilationUnit() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PACKAGE:
      PackageDeclaration();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      ImportDeclaration();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 75:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      AnnotationDeclaration();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
      case ABSTRACT:
      case BOOLEAN:
      case CHAR:
      case CLASS:
      case DOUBLE:
      case FINAL:
      case INT:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
      case VOID:
      case IDENTIFIER:
      case 79:
      case 80:
      case 81:
      case 82:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      TypeDeclaration();
    }
    jj_consume_token(0);
  }

  final public void AnnotationDeclaration() throws ParseException {
    jj_consume_token(75);
    Name();
  }

  final public void PackageDeclaration() throws ParseException {
    jj_consume_token(PACKAGE);
    Name();
    jj_consume_token(SEMICOLON);
  }

  final public void ImportDeclaration() throws ParseException {
    jj_consume_token(IMPORT);
    Name();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOT:
      jj_consume_token(DOT);
      jj_consume_token(76);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
  }

  final public void TypeDeclaration() throws ParseException {
    if (jj_2_1(2147483647)) {
                                                              System.out.println("cc");
      ClassDeclaration();
                       System.out.println("classdecl");
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABSTRACT:
      case BOOLEAN:
      case CHAR:
      case DOUBLE:
      case FINAL:
      case INT:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
      case VOID:
      case IDENTIFIER:
      case 79:
      case 80:
      case 81:
      case 82:
        MethodDeclaration();
                          System.out.println("method");
        break;
      case SEMICOLON:
        FieldDeclaration();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void InterfaceDeclaration() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABSTRACT:
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABSTRACT:
        jj_consume_token(ABSTRACT);
        break;
      case PUBLIC:
        jj_consume_token(PUBLIC);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(INTERFACE);
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      jj_consume_token(EXTENDS);
      Name();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
      case ABSTRACT:
      case BOOLEAN:
      case CHAR:
      case DOUBLE:
      case FINAL:
      case INT:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
      case VOID:
      case IDENTIFIER:
      case 79:
      case 80:
      case 81:
      case 82:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
      InterfaceMemberDeclaration();
    }
    jj_consume_token(RBRACE);
  }

  final public void MethodDeclarationLookahead() throws ParseException {
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABSTRACT:
      case FINAL:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        jj_consume_token(PUBLIC);
        break;
      case PROTECTED:
        jj_consume_token(PROTECTED);
        break;
      case PRIVATE:
        jj_consume_token(PRIVATE);
        break;
      case STATIC:
        jj_consume_token(STATIC);
        break;
      case ABSTRACT:
        jj_consume_token(ABSTRACT);
        break;
      case FINAL:
        jj_consume_token(FINAL);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    ResultType();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
  }

  final public void InterfaceMemberDeclaration() throws ParseException {
    if (jj_2_2(2147483647)) {
      MethodDeclaration();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
      case BOOLEAN:
      case CHAR:
      case DOUBLE:
      case FINAL:
      case INT:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
      case IDENTIFIER:
      case 79:
      case 80:
      case 81:
      case 82:
        FieldDeclaration();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void ClassDeclaration() throws ParseException {
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABSTRACT:
      case FINAL:
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABSTRACT:
        jj_consume_token(ABSTRACT);
        break;
      case FINAL:
        jj_consume_token(FINAL);
        break;
      case PUBLIC:
        jj_consume_token(PUBLIC);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      jj_consume_token(EXTENDS);
      Name();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IMPLEMENTS:
      jj_consume_token(IMPLEMENTS);
      Name();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(LBRACE);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
      case ABSTRACT:
      case BOOLEAN:
      case CHAR:
      case DOUBLE:
      case FINAL:
      case INT:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
      case VOID:
      case IDENTIFIER:
      case 79:
      case 80:
      case 81:
      case 82:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_8;
      }
      ClassBodyDeclaration();
    }
    jj_consume_token(RBRACE);
    System.out.println("class");
  }

  final public void ClassBodyDeclaration() throws ParseException {
    InterfaceMemberDeclaration();
  }

  final public void FieldAlone() throws ParseException {
    Type();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRING_LITERAL:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_9;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRING_LITERAL:
          jj_consume_token(STRING_LITERAL);
          break;
        case IDENTIFIER:
          Name();
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
  }

  final public void FieldDeclaration() throws ParseException {
 Token t;
String zx ="";
String s="";
String d ="";
String z = "";
java.util.ArrayList < String> line = new java.util.ArrayList();
    if (jj_2_3(2147483647)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        VariableDeclarator();
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case CHAR:
      case DOUBLE:
      case FINAL:
      case INT:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
      case IDENTIFIER:
      case 79:
      case 80:
      case 81:
      case 82:
        label_10:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FINAL:
          case PRIVATE:
          case PROTECTED:
          case PUBLIC:
          case STATIC:
            ;
            break;
          default:
            jj_la1[22] = jj_gen;
            break label_10;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PUBLIC:
            jj_consume_token(PUBLIC);
            break;
          case PROTECTED:
            jj_consume_token(PROTECTED);
            break;
          case PRIVATE:
            jj_consume_token(PRIVATE);
            break;
          case STATIC:
            jj_consume_token(STATIC);
            break;
          case FINAL:
            jj_consume_token(FINAL);
            break;
          default:
            jj_la1[23] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        s = Type();
            System.out.println(s);
        d = VariableDeclarator();
        label_11:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[24] = jj_gen;
            break label_11;
          }
          jj_consume_token(COMMA);
          z = VariableDeclarator();
        }
        jj_consume_token(SEMICOLON);
                                                                                                   zx += s+" "+d+z; System.out.println("2. "+zx);line.add(zx); System.out.println(line);
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public String VariableDeclaratorId() throws ParseException {
 Token t;
    t = jj_consume_token(IDENTIFIER);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_12;
      }
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
    }
{if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public String VariableInitializer() throws ParseException {
 String a="";
    a = Expression();
                   {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public String VariableDeclarator() throws ParseException {
 Token t;
String r="";
String z = "";
    r = VariableDeclaratorId();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 77:
    case 78:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 77:
        jj_consume_token(77);
        z = VariableInitializer();
                                                           r += "="+z;
        break;
      case 78:
        jj_consume_token(78);
        z = VariableInitializer();
                                                                                                        r += "="+z;
        break;
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
System.out.println("1. "+r);
        {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public String Type() throws ParseException {
 String type="";
String tem="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case CHAR:
    case DOUBLE:
    case INT:
    case 79:
    case 80:
    case 81:
    case 82:
      type = PrimitiveType();
      break;
    case IDENTIFIER:
      type = Name();
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        ;
        break;
      default:
        jj_la1[30] = jj_gen;
        break label_13;
      }
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
                                                     type +="[]";
    }
        {if (true) return type;}
    throw new Error("Missing return statement in function");
  }

  final public String PrimitiveType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
              {if (true) return "boolean";}
      break;
    case CHAR:
      jj_consume_token(CHAR);
          {if (true) return "char";}
      break;
    case 79:
      jj_consume_token(79);
            {if (true) return "String";}
      break;
    case 80:
      jj_consume_token(80);
                       {if (true) return "PreparedStatement";}
      break;
    case INT:
      jj_consume_token(INT);
         {if (true) return "int";}
      break;
    case 81:
      jj_consume_token(81);
               {if (true) return "Statement";}
      break;
    case 82:
      jj_consume_token(82);
               {if (true) return "ResultSet";}
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
            {if (true) return "double";}
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String Name() throws ParseException {
 Token t;
String a="";
    t = jj_consume_token(IDENTIFIER);
                   a = t.image;
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[32] = jj_gen;
        break label_14;
      }
      jj_consume_token(DOT);
      t = jj_consume_token(IDENTIFIER);
                         a += "."+t.image;
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public String Expression() throws ParseException {
 String exp="";
    exp = Assignment();
                    {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public String Assignment() throws ParseException {
 Token t = null;
String a="";
String b="";
String tem="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING_LITERAL:
      t = jj_consume_token(STRING_LITERAL);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 83:
        jj_consume_token(83);
        b = Name();
        break;
      default:
        jj_la1[33] = jj_gen;
        ;
      }
                                         {if (true) return a+t.image+b;}
      break;
    default:
      jj_la1[41] = jj_gen;
      if (jj_2_4(2147483647)) {
        a = Name();
        b = StringIn(t);
                                                                                                                         a += b; {if (true) return a;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          a = Name();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LPAREN:
            jj_consume_token(LPAREN);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IDENTIFIER:
              tem = Name();
              break;
            default:
              jj_la1[34] = jj_gen;
              ;
            }
            jj_consume_token(RPAREN);
            break;
          default:
            jj_la1[35] = jj_gen;
            ;
          }
                                                                                                                                                                                if(tem == "") { a += "()";} else { a += "("+tem + " )"; }
          label_15:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case 83:
              ;
              break;
            default:
              jj_la1[36] = jj_gen;
              break label_15;
            }
            jj_consume_token(83);
            b = Name();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LPAREN:
              jj_consume_token(LPAREN);
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case IDENTIFIER:
                tem = Name();
                break;
              default:
                jj_la1[37] = jj_gen;
                ;
              }
              jj_consume_token(RPAREN);
              break;
            default:
              jj_la1[38] = jj_gen;
              ;
            }
          }
                                                                                                                                                                                                                                                                                    if(b=="") { } else {  if(tem == "") { b += "()";} else { b += "("+tem + " )"; }} a+=b;{if (true) return a;}
          break;
        case NEW:
          jj_consume_token(NEW);
          a = Name();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LPAREN:
            jj_consume_token(LPAREN);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IDENTIFIER:
              tem = Name();
              break;
            default:
              jj_la1[39] = jj_gen;
              ;
            }
            jj_consume_token(RPAREN);
            break;
          default:
            jj_la1[40] = jj_gen;
            ;
          }
                                        a = "new"+" " +a+tem; {if (true) return a+=b;}
          break;
        case NULL:
          jj_consume_token(NULL);
                                                                                       a = "null";
{if (true) return a+=b;}
          break;
        default:
          jj_la1[42] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public String StringIn(Token t) throws ParseException {
    jj_consume_token(LPAREN);
    t = jj_consume_token(STRING_LITERAL);
    jj_consume_token(RPAREN);
                               {if (true) return "(" +t.image + ")";}
    throw new Error("Missing return statement in function");
  }

  final public void MethodDeclaration() throws ParseException {
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABSTRACT:
      case FINAL:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
        ;
        break;
      default:
        jj_la1[43] = jj_gen;
        break label_16;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        jj_consume_token(PUBLIC);
        break;
      case PROTECTED:
        jj_consume_token(PROTECTED);
        break;
      case PRIVATE:
        jj_consume_token(PRIVATE);
        break;
      case STATIC:
        jj_consume_token(STATIC);
        break;
      case ABSTRACT:
        jj_consume_token(ABSTRACT);
        break;
      case FINAL:
        jj_consume_token(FINAL);
        break;
      default:
        jj_la1[44] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    ResultType();
    MethodDeclarator();
                                    System.out.println("resultfinish");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      Block();
      break;
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[45] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                      System.out.println("methodfinish");
  }

  final public void MethodDeclarator() throws ParseException {
    jj_consume_token(IDENTIFIER);
    FormalParameters();
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        ;
        break;
      default:
        jj_la1[46] = jj_gen;
        break label_17;
      }
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
    }
  }

  final public void FormalParameters() throws ParseException {
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case CHAR:
    case DOUBLE:
    case INT:
    case IDENTIFIER:
    case 79:
    case 80:
    case 81:
    case 82:
      FormalParameter();
      label_18:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[47] = jj_gen;
          break label_18;
        }
        jj_consume_token(COMMA);
        FormalParameter();
      }
      break;
    default:
      jj_la1[48] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
  }

  final public void FormalParameter() throws ParseException {
    Type();
    VariableDeclaratorId();
  }

  final public void Block() throws ParseException {
    jj_consume_token(LBRACE);
    label_19:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
      case BOOLEAN:
      case CHAR:
      case DOUBLE:
      case FINAL:
      case INT:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
      case TRY:
      case IDENTIFIER:
      case 79:
      case 80:
      case 81:
      case 82:
        ;
        break;
      default:
        jj_la1[49] = jj_gen;
        break label_19;
      }
      BlockStatement();
    }
    jj_consume_token(RBRACE);
  }

  final public void BlockStatement() throws ParseException {
    if (jj_2_5(2147483647)) {
      FieldAlone();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
      case BOOLEAN:
      case CHAR:
      case DOUBLE:
      case FINAL:
      case INT:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case STATIC:
      case IDENTIFIER:
      case 79:
      case 80:
      case 81:
      case 82:
        FieldDeclaration();
        break;
      case TRY:
        TryStatement();
                   System.out.println("pretry");
        break;
      default:
        jj_la1[50] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

